src/test/deca/context/invalid/Obj/select-class-inexistante.deca
// Description:
//    Sélection d'un champ ou d'une méthode d'une classe non déclarée
//
// Résultat:
//variable non definie
//
{
    boolean bool = A.b;
}